ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rook.koothooloo.io
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard-external
          servicePort: dashboard
